--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,8 +47,8 @@
         </div>
         <!-- Nav Menu -->
         <div class="row" id="nav-menu">
-            <div class="col-0 col-sm-1 col-xl-2"></div>
-            <div class="col-12 col-sm-10 col-xl-8">
+            <div class="col-0 col-md-1 col-xl-2"></div>
+            <div class="col-12 col-md-10 col-xl-8" id="main-header">
                 <div id="site-logo">
                     <a href="/">
                         <img src="http://essai-automobile.com/actualites/photos-logos/jaguar-logo.png" alt="PixelPOW logo">
@@ -67,7 +67,7 @@
                     <img src="/img/menu-icon.png" alt="menu icon">
                 </div>
             </div>
-            <div class="col-0 col-sm-1 col-xl-2"></div>
+            <div class="col-0 col-md-1 col-xl-2"></div>
         </div>
         <!-- Sticky Nav -->
         <!-- Mobile Nav -->
