--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
 </head>
 <body>
     <header>
-        <%- include('header') -%>
+        <%- include('blocks/header') -%>
     </header>
     <main>
         <!-- Hero Slider -->
