--- a/views/blocks/header.ejs
+++ b/views/blocks/header.ejs
@@ -53,24 +53,23 @@
             <div id="menu-logo" class="menu-popout-link">
                 <img src="/img/pixelpow-logo.png" alt="PixelPOW logo">
             </div>
-            <div class="menu-popout-link">
-                <a href="#">Home</a>
-            </div>
-            <div class="menu-popout-link">
-                <a href="#">About Us</a>
-            </div>
-            <div class="menu-popout-link">
-                <a href="#">Workshops</a>
-            </div>
-            <div class="menu-popout-link">
-                <a href="#">Testimonials</a>
-            </div>
-            <div class="menu-popout-link">
-                <a href="#">Contact</a>
-            </div>
-            <div class="menu-popout-link">
-                <a href="#">Donate</a>
-            </div>
+            <a href="#">
+                <div class="menu-popout-link">Home</div>
+            </a>
+            <a href="#">
+                <div class="menu-popout-link">About Us</div>
+            </a>
+            <a href="#">
+                <div class="menu-popout-link">Workshops</div>
+            </a>
+            <a href="#">
+                <div class="menu-popout-link">Testimonials</div>
+            <a href="#">
+                <div class="menu-popout-link">Contact</div>
+            </a>
+            <a href="#">
+                <div class="menu-popout-link">Donate</div>
+            </a>
         </div>
         <div id="site-dim"></div>
     </div>
