completed About Us section of index.ejs

--- a/views/blocks/header.ejs
+++ b/views/blocks/header.ejs
@@ -44,7 +44,7 @@
                 <div class="menu-link"><a href="#">Testimonials</a></div>
                 <div class="menu-link"><a href="#">Contact</a></div>
         </div>
-        <!-- Mobile Menu -->
+        <!-- Mobile Popout Nav -->
         <div id="menu-icon" class="d-lg-none">
             <img id="menu-icon-img" src="/img/menu-icon.png" alt="menu icon">
         </div>
@@ -76,4 +76,3 @@
     <div class="col-0 col-lg-1 col-xl-2"></div>
 </div>
 <!-- Sticky Nav -->
-<!-- Mobile Nav -->
