--- a/static/css/main.css
+++ b/static/css/main.css
@@ -50,6 +50,16 @@ a:hover {
 .row {
     margin-left: 0px;
 }
+p {
+    font-size: 13px;
+    line-height: 22px;
+    margin-bottom: 28px;
+}
+h2 {
+    font-size: 26px;
+    line-height: 30px;
+    margin: 28px 0px;
+}
 
 /* HEADER */
 @media screen and (min-width: 991.5px) {
@@ -101,7 +111,6 @@ a:hover {
 #nav-menu {
     height: 118px;
     width: 100%;
-    background-color: rgb(214, 214, 214);
     box-sizing: border-box;
     font-family: 'Montserrat Bold', Helvetica, sans-serif;
     font-size: 12px;
@@ -184,10 +193,10 @@ a:hover {
     padding-top: 12px;
 }
 @media (min-width: 991.5px) {
-    #menu-popout, #menu-x, #site-dim {
+    #menu-popout, #menu-x, #site-dim, .menu-popout-link, #menu-logo {
         display: none;
     }
-}
+}   
 @media (max-width: 991.5px) {
     #menu-popout {
         width: 320px;
@@ -242,4 +251,104 @@ a:hover {
         display: none;
         z-index: 98;
     } 
+}
+
+/* Hero Slider */
+#hero-slider {
+    height: 600px;
+    position: relative;
+}
+#hero-slider-img {
+    background-image: url('/img/heroslider1.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    min-width: 100%;
+    min-height: 100%;
+}
+.hero-arrow {
+    position: absolute;
+    top: 278px;
+    height: 40px;
+    width: 40px;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: inline-block;
+}
+@media (min-width: 767.5px) {
+    #hero-left-arrow {
+        left: 100px;
+        background-image: url('/img/hero_arrow_left_black.png');
+    }
+    #hero-left-arrow:hover {
+        background-image: url('/img/hero_arrow_left_yellow.png');
+        cursor: pointer;
+    }
+    #hero-right-arrow {
+        right: 100px;
+        background-image: url('/img/hero_arrow_right_black.png');
+    }
+    #hero-right-arrow:hover {
+        background-image: url('/img/hero_arrow_right_yellow.png');
+        cursor: pointer;
+    }
+}
+@media (max-width: 767.5px) {
+    #hero-left-arrow {
+        left: 15px;
+        background-image: url('/img/mobile_arrow_left_black.png');
+    }
+    #hero-left-arrow:hover {
+        background-image: url('/img/mobile_arrow_left_yellow.png');
+        cursor: pointer;
+    }
+    #hero-right-arrow {
+        right: 15px;
+        background-image: url('/img/mobile_arrow_right_black.png');
+    }
+    #hero-right-arrow:hover {
+        background-image: url('/img/mobile_arrow_right_yellow.png');
+        cursor: pointer;
+    }
+}
+#hero-dots-box {
+    position: absolute;
+    top: 580px;
+    left: 40%;
+    right: 40%;
+    text-align: center;
+}
+.hero-dot {
+    width: 12px;
+    height: 12px;
+    display: inline-block;
+    cursor: pointer;
+}
+#hero-dot-0{
+    background-image: url('/img/dot_yellow.png');
+}
+#hero-dot-1, #hero-dot-2 {
+    background-image: url('/img/dot_black.png');
+}
+
+/* About Us Section */
+#about-us-box {
+    text-align: center;
+    font-family: 'Varela Round', Helvetica, sans-serif;
+}
+@media (min-width: 991.5px) {
+    #about-us-box {
+        padding: 75px 0px;
+    }
+}
+@media (max-width: 991.5px) {
+    #about-us-box {
+        padding: 25px 10px;
+    }
+}
+.yellow-bar {
+    height: 2px;
+    width: 50px;
+    background-color: #f2cb05;
+    margin: 0 auto 28px auto;
 }
