--- a/static/css/main.css
+++ b/static/css/main.css
@@ -56,6 +56,12 @@ p {
     margin-bottom: 28px;
 }
 h2 {
+    font-size: 32px;
+    line-height: 30px;
+    margin: 28px 0px;
+    font-weight: bold;
+}
+h3 {
     font-size: 26px;
     line-height: 30px;
     margin: 28px 0px;
@@ -351,4 +357,44 @@ h2 {
     width: 50px;
     background-color: #f2cb05;
     margin: 0 auto 28px auto;
+}
+
+/* Issues */
+.issue-box {
+    position: relative;
+    color: white;
+}
+.issue-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 650px;
+    width: 100%;
+    display: inline-block;
+    z-index: 96;
+}
+#issue-1-img {
+    background-image: url('/img/workshop1.png');
+    background-size: cover;
+}
+.issue-content {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 650px;
+    width: 55%;
+    display: inline-block;
+    z-index: 97;
+    border-bottom: 650px solid #f23322;
+    border-left: 150px solid transparent;
+    /* border-right: 50px solid transparent; */
+}
+.issue-number {
+    font-family: 'Open Sans', Helvetica, sans-serif;
+    font-style: italic;
+    margin-bottom: 8px;
+}
+.issue-title {
+    font-family: 'Montserrat Bold', Helvetica, sans-serif;
+    margin-top: 0px;
 }
