--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,8 +45,9 @@
         </div>
         <!-- Issue #1 -->
         <div id="issue-1" class="issue-box">
-            <div id="issue-1-img" class="issue-img"></div>
-            <div id="issue-1-content" class="issue-content">
+            <div id="issue-1-img" class="issue-img-left"></div>
+            <div id="issue-1-textarea" class="issue-textarea-right"></div>
+            <div id="issue-1-content" class="issue-content-right">
                 <p class="issue-number">Issue #1</p>
                 <h2 class="issue-title">The Origin Story: Graphic Design Basics</h2>
             </div>
