--- a/views/blocks/issue3.ejs
+++ b/views/blocks/issue3.ejs
@@ -1,6 +1,6 @@
 <div>
 <div id="issue-3" class="issue-box">
-    <div id="issue-3-img" class="issue-img-left issue-img"></div>
+    <div id="issue-3-img" class="issue-img"></div>
     <div id="issue-3-textarea" class="issue-textarea-right issue-textarea">
         <div id="issue-3-content" class="issue-content-right issue-content">
             <p class="issue-number">Issue #3</p>
