--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,6 +36,7 @@
         <!-- Issue #1 -->
         <%- include('blocks/issue1') -%>
         <!-- Issue #2 -->
+        <%- include('blocks/issue2') -%>
         <!-- Issue #3 -->
         <%- include('blocks/issue3') -%>
         <!-- Testimonials -->
