--- a/views/blocks/issue2.ejs
+++ b/views/blocks/issue2.ejs
@@ -1,11 +1,11 @@
-<div id="issue-1" class="issue-box">
-    <div id="issue-1-img" class="issue-img"></div>
-    <div id="issue-1-textarea" class="issue-textarea-right issue-textarea">
-        <div id="issue-1-content" class="issue-content-right issue-content">
-            <p class="issue-number">Issue #1</p>
-            <h2 class="issue-title">The Origin Story: Graphic Design Basics</h2>
+<div id="issue-2" class="issue-box">
+    <div id="issue-2-img" class="issue-img"></div>
+    <div id="issue-2-textarea" class="issue-textarea-left issue-textarea">
+        <div id="issue-2-content" class="issue-content-left issue-content">
+            <p class="issue-number">Issue #2</p>
+            <h2 class="issue-title">Mission: Typography</h2>
             <p class="in-this-issue">IN THIS ISSUE...</p>
-            <p class="issue-details">You'll start your adventure as a graphic design hero! Learn the basic skills you'll need to do battle with any design challenge that comes your way.</p>
+            <p class="issue-details">You’ll embark on a secret mission to uncover the truth about typography and its applications in design. Learning and applying a glossary of term like base line, cap height, leading, kerning, and more—by the end of this adventure, you’ll fly away with all the tools you need to utilize typography as an expressive, integral part of  your designs.</p>
             <div class="white-bar"></div>
             <a href="#"><button class="download-btn">Download</button></a>
             <div class="issue-stats-box">
@@ -20,7 +20,7 @@
                     <h6>Difficulty</h6>
                 </div>
                 <div class="issue-stat">
-                    <h4>82</h4>
+                    <h4>103</h4>
                     <div class="stats-white-bar"></div>
                     <h6>Downloads</h6>
                 </div>
