--- a/views/blocks/issue1.ejs
+++ b/views/blocks/issue1.ejs
@@ -3,23 +3,23 @@
     <div id="issue-1-textarea" class="issue-textarea-right issue-textarea">
         <div id="issue-1-content" class="issue-content-right issue-content">
             <p class="issue-number">Issue #1</p>
-            <h2 class="issue-title">The Origin Story: Graphic Design Basics</h2>
+            <h2 id="issue-1-title" class="issue-title">The Origin Story: Graphic Design Basics</h2>
             <p class="in-this-issue">IN THIS ISSUE...</p>
             <p class="issue-details">You'll start your adventure as a graphic design hero! Learn the basic skills you'll need to do battle with any design challenge that comes your way.</p>
             <div class="white-bar"></div>
             <a href="#"><button class="download-btn">Download</button></a>
             <div class="issue-stats-box">
-                <div class="issue-stat">
+                <div class="issue-stat issue-stat-right">
                     <h4>2hrs</h4>
                     <div class="stats-white-bar"></div>
                     <h6>Run Time</h6>
                 </div>
-                <div class="issue-stat">
+                <div class="issue-stat issue-stat-right">
                     <h4>beginner</h4>
                     <div class="stats-white-bar"></div>
                     <h6>Difficulty</h6>
                 </div>
-                <div class="issue-stat">
+                <div class="issue-stat issue-stat-right">
                     <h4>82</h4>
                     <div class="stats-white-bar"></div>
                     <h6>Downloads</h6>
