--- a/views/blocks/issue3.ejs
+++ b/views/blocks/issue3.ejs
@@ -4,23 +4,23 @@
     <div id="issue-3-textarea" class="issue-textarea-right issue-textarea">
         <div id="issue-3-content" class="issue-content-right issue-content">
             <p class="issue-number">Issue #3</p>
-            <h2 class="issue-title">The Secret Weapons: Photoshop &amp; Illustrator</h2>
+            <h2 id="issue-3-title" class="issue-title">The Secret Weapons: Photoshop &amp; Illustrator</h2>
             <p class="in-this-issue">IN THIS ISSUE...</p>
             <p class="issue-details">You’ll master the secret weapons you need to become SUPER DESIGNER. Using six comic-themed activities, you’ll explore some of the most important and powerful tools in both Adobe Photoshop &amp; Illustrator.</p>
             <div class="white-bar"></div>
             <a href="#"><button class="download-btn">Download</button></a>
             <div class="issue-stats-box">
-                <div class="issue-stat">
+                <div class="issue-stat issue-stat-right">
                     <h4>2.5hrs</h4>
                     <div class="stats-white-bar"></div>
                     <h6>Run Time</h6>
                 </div>
-                <div class="issue-stat">
+                <div class="issue-stat issue-stat-right">
                     <h4>beginner</h4>
                     <div class="stats-white-bar"></div>
                     <h6>Difficulty</h6>
                 </div>
-                <div class="issue-stat">
+                <div class="issue-stat issue-stat-right">
                     <h4>76</h4>
                     <div class="stats-white-bar"></div>
                     <h6>Downloads</h6>
