--- a/views/blocks/issue2.ejs
+++ b/views/blocks/issue2.ejs
@@ -3,23 +3,23 @@
     <div id="issue-2-textarea" class="issue-textarea-left issue-textarea">
         <div id="issue-2-content" class="issue-content-left issue-content">
             <p class="issue-number">Issue #2</p>
-            <h2 class="issue-title">Mission: Typography</h2>
+            <h2 id="issue-2-title" class="issue-title">Mission: Typography</h2>
             <p class="in-this-issue">IN THIS ISSUE...</p>
             <p class="issue-details">You’ll embark on a secret mission to uncover the truth about typography and its applications in design. Learning and applying a glossary of term like base line, cap height, leading, kerning, and more—by the end of this adventure, you’ll fly away with all the tools you need to utilize typography as an expressive, integral part of  your designs.</p>
             <div class="white-bar"></div>
             <a href="#"><button class="download-btn">Download</button></a>
             <div class="issue-stats-box">
-                <div class="issue-stat">
+                <div class="issue-stat issue-stat-left">
                     <h4>2hrs</h4>
                     <div class="stats-white-bar"></div>
                     <h6>Run Time</h6>
                 </div>
-                <div class="issue-stat">
+                <div class="issue-stat issue-stat-left">
                     <h4>beginner</h4>
                     <div class="stats-white-bar"></div>
                     <h6>Difficulty</h6>
                 </div>
-                <div class="issue-stat">
+                <div class="issue-stat issue-stat-left">
                     <h4>103</h4>
                     <div class="stats-white-bar"></div>
                     <h6>Downloads</h6>
