finished testimonial slider

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Facebook -->
-    <meta property="og:site_name" content="PixelPOW">
+    <meta property="og:site_name" content="Pixel Pow">
     <meta property="og:url" content="http://www.pixelpow.com">
     <meta property="og:title" content='PixelPOW'>
     <meta property="og:description" content="Pixel Pow is an educational resource that makes the perfect sidekick for graphic design students &amp; faculty who want to incorporate comic books into their curriculums &amp; research.">
@@ -40,8 +40,7 @@
         <!-- Issue #3 -->
         <%- include('blocks/issue3') -%>
         <!-- Testimonials -->
-            <!-- Testimonials Slider -->
-            <!-- Testimonials CTA -->
+        <%- include('blocks/testimonials') -%>
         <!-- School Clients -->
         <!-- Newsletter Signup -->
     </main>
