--- a/static/css/main.css
+++ b/static/css/main.css
@@ -666,3 +666,84 @@ h6 {
         line-height: 32px;
     }
 }
+
+/* TESTIMONIALS */
+#testimonial-box {
+    background-color: #2c2c2c;
+    width: 100%;
+    height: 100%;
+    margin-top: -4px;
+    color: white;
+}
+@media (min-width: 991.5px) {
+    #testimonial-box {
+        padding: 100px 0px;
+    }
+}
+@media (max-width: 991.5px) {
+    #testimonial-box {
+        padding: 80px 0px;
+    }
+}
+.testimonial-wrapper {
+    text-align: center;
+    position: relative;
+}
+.testimonial-content {
+    display: inline-block;
+    width: 95%;
+    margin-left: 7px;
+}
+.testimonial-prev {
+    display: inline-block;
+    width: 7px;
+    height: 10px;
+    background-image: url('/img/mobile_arrow_left_yellow.png');
+}
+.testimonial-next {
+    display: inline-block;
+    width: 7px;
+    height: 10px;
+    background-image: url('/img/mobile_arrow_right_yellow.png');
+}
+.testimonial-arrow {
+    position: absolute;
+    top: 50%;
+    padding: 1px;
+}
+.testimonial-arrow:hover {
+    cursor: pointer;
+}
+.testimonial-img {
+    display: block;
+    width: 80px;
+    margin: 0px auto 40px auto;
+}
+.testimonial-quote, .testimonial-title {
+    font-family: 'Varela Round', Helvetica, sans-serif;
+}
+.testimonial-quote {
+    padding: 0px 40px;
+}
+@media (min-width: 991.5px) {
+    .testimonial-quote {
+        font-size: 15px;
+        line-height: 30px;
+    }
+}
+@media (max-width: 991.5px) {
+    .testimonial-quote {
+        font-size: 18px;
+        line-height: 36px;
+        padding: 0px 25px;
+    }
+}
+.testimonial-person {
+    font-family: 'Montserrat', Helvetica, sans-serif;
+    color: #f29f05;
+    font-size: 15px;
+    margin-bottom: 2px;
+}
+#testimonial-1, #testimonial-2 {
+    display: none;
+}
