completed testimonials section

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -75,6 +75,13 @@ h4 {
     font-weight: 700;
     letter-spacing: 1.1px;
 }
+h5 {
+    font-family: 'Montserrat', Helvetica, sans-serif;
+    font-size: 20px;
+    line-height: 28px;
+    font-weight: 700;
+    letter-spacing: 1.1px;
+}
 h6 {
     font-family: 'Montserrat', Helvetica, sans-serif;
     font-size: 15px;
@@ -746,4 +753,17 @@ h6 {
 }
 #testimonial-1, #testimonial-2 {
     display: none;
+}
+#testimonial-cta {
+    background-color: #f29f05;
+    text-align: center;
+    padding: 20px;
+}
+#testimonial-cta h5 {
+    color: white;
+}
+@media (max-width: 991.5px) {
+    #testimonial-cta {
+        display: none;
+    }
 }
