--- a/views/blocks/testimonials.ejs
+++ b/views/blocks/testimonials.ejs
@@ -40,3 +40,10 @@
     <div class="offset-lg-1 offset-xl-2"></div>
 </div>
 <!-- Testimonials CTA -->
+<div id="testimonial-cta" class="row">
+    <div class="offset-lg-1 offset-xl-2"></div>
+    <div class="col-12 col-lg-10 col-xl-8">
+        <h5>Do you want to share your testimonial? <span style="color: #1c2239">E-mail us now!</span></h5>
+    </div>
+    <div class="offset-lg-1 offset-xl-2"></div>
+</div>
